init: starter files + config

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,7 @@
 {
   "arrowParens": "avoid",
-  "semi": false
+  "semi": true,
+  "bracketSpacing": true,
+  "trailingComma": "es5",
+  "tabWidth": 2
 }
